# learn-gstreamer

./: .gitignore  CMakeLists.txt  README.md  basic-tutorial-2-exercise.c  basic-tutorial-3-exercise.c  basic-tutorial-5-exercise.cpp  build.sh  playback-tutorial-7-exercise.c
